# llx

./: .dockerignore  .env.example  .env.new  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES_MIGRATION_PLAN.md  EXAMPLES_REFACTORING_SPEC.md  LLX_ENHANCEMENT_PLAN.md  LLX_PLANFILE_SIMPLIFICATION.md  LLX_STRATEGY_INTEGRATION.md  Makefile  README.md  REFACTORING_SPRINT4_SUMMARY.md  REFACTORING_SUMMARY.md  SIMPLE_CONFIG.md  SUMD.md  SUMR.json  SUMR.md  TODO.md  Taskfile.yml  ai-tools-manage.sh  app.doql.css  app.doql.less  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker-manage.sh  generate.sh  github.planfile.yaml  goal.yaml  index.html  llx-orchestrator  llx-tools  llx.yaml  my_api  planfile.yaml  planfile.yaml.bak.20260426-174851  planfile.yaml.bak.20260426-182447  (+24 more)
.github/workflows/: pyqual-issue-sync.yml  pyqual-run.yml  pyqual-tickets.yml
.pyqual/: coverage.json
.redsl/: history.jsonl
.taskill/: state.json
code2llm_output/: README.md  analysis.toon.yaml  context.md  evolution.toon.yaml
code2llm_output/llx/: analysis.toon.yaml
code2llm_output/my-api_my_api/: analysis.toon.yaml
code2llm_output/root/: evolution.toon.yaml
docker/ai-tools/: entrypoint.sh  install-tools.sh
docker/nginx/: nginx.conf
docker/ollama/: entrypoint.sh
docker/postgres/: init.sql
docker/redis/: redis.conf
docker/vscode/: install-extensions.sh  settings.json
docs/: GITHUB_PUSH_PROTECTION.md  PLANFILE_CLEANUP.md  PRIVACY.md  PYQUAL_INTEGRATION.md  README.md  TESTQL_INTEGRATION.md  aider-integration.md  integration-status.md  llx-tools.md  orchestration.md
examples/: README.md  REFACTORING_FINAL.md  REFACTORING_SUMMARY.md  cleanup.sh  proxy-test.yaml  pyqual-llx-demo.sh  run.sh
examples/ai-tools/: README.md  main.py  run.sh
examples/aider/: README.md  aider_demo.py  run.sh  strategy.yaml  test_integration.py
examples/basic/: README.md  main.py  run.sh  strategy.yaml
examples/cli-tools/: README.md  quick_cli.sh  run.sh  strategy.yaml
examples/cloud-local/: README.md  integration.sh  run.sh
examples/docker/: README.md  docker.sh  main.py  run.sh
examples/filtering/: README.md  advanced_filters.py  demo.sh  filtering.sh  run.sh  strategy.yaml
examples/fullstack/: README.md  app_generator.py  fullstack-strategy.yaml  generate.sh  generate_simple.sh  run.sh
examples/hybrid/: README.md  hybrid.sh  hybrid_dev.sh  hybrid_manager.py  run.sh
examples/local/: README.md  main.py  run.sh
examples/multi-provider/: README.md  main.py  run.sh
examples/planfile/: FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  OPENROUTER_INTEGRATION.md  PLANFILE_USAGE_GUIDE.md  README.md  README_NEW.md  TEST_REPORT.md  async_refactor_demo.py  async_refactored.py  calculator.py  callback_hell.py  complete_workflow.py  duplicate_test.py  duplication_refactor_strategy.yaml  duplication_refactor_strategy_v2.yaml  generate_strategy.py  generated_strategy.yaml  microservice_refactor.py  monolith_service.py  planfile.sh  planfile_config.yaml  planfile_dev.sh  planfile_manager.py  run.sh  simple_strategy.yaml  simple_test.py  strategy.yaml  strategy_corrected.yaml  strategy_final.yaml  strategy_fixed.yaml  strategy_simple.yaml  strategy_v2.yaml  strategy_v3.yaml  test_builder_final.yaml  test_builder_strategy.yaml  test_builder_strategy_v2.yaml  test_final_report.py  test_openrouter.py  test_openrouter_simple.py  test_planfile.py  (+8 more)
examples/privacy/: README.md
examples/proxy/: README.md  main.py  run.sh
examples/python-api/: QUICKSTART.md  README.md  api-strategy.yaml  run.sh  run.sh.backup  run.sh.old  run.sh.v2  setup-aliases.sh  strategy.yaml  strategy_cheaper.yaml  strategy_complete.yaml  strategy_desc.yaml
examples/vscode-roocode/: README.md  demo.py  run.sh
llx/: __init__.py  __main__.py  config.py  litellm_config.py  llm.py  workflows.py
llx/analysis/: __init__.py  collector.py  runner.py
llx/cli/: __init__.py  app.py  formatters.py  strategy_commands.py  version_check.py
llx/commands/: __init__.py  _patch_apply.py  fix.py
llx/configs/: planfile_config.yaml  project_types.yaml
llx/detection/: __init__.py  detector.py
llx/examples/: utils.py
llx/integrations/: __init__.py  context_builder.py  prefact.py  proxy.py  proxym.py
llx/mcp/: __init__.py  __main__.py  client.py  server.py  service.py  tools.py  workflows.py
llx/orchestration/: __init__.py  _utils.py  cli.py  cli_utils.py  instance_manager.py  llm_orchestrator.py  orchestrator_cli.py  queue_manager.py  rate_limiter.py  routing_engine.py  session_manager.py  vscode_orchestrator.py
llx/planfile/: IMPROVEMENTS_SUMMARY.md  README_SIMPLIFIED.md  __init__.py  builder.py  builder_simple.py  config.py  examples.py  executor.py  executor_simple.py  generate_strategy.py  model_selector.py  (+5 more)
my-api/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  models.py  monitoring.py  pyproject.toml  test_api.py
my-api/.github/workflows/: ci-cd.yml
my-api/docs/: api.md
my-api/src/my_api/: __init__.py  main.py  models.py  monitoring.py  test_api.py
my-api/tests/: test_my_api.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
scripts/: pyqual_auto.py
test-api-qwen/: README.md  __init__.py  main.py  models.py  pyproject.toml
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_aider_mcp.py  test_anonymization_context.py  test_backend_detection.py  test_core.py  test_detection.py  test_fix_aider_mode.py  test_mcp.py  test_plan_run_regressions.py  test_plan_testql_e2e.py  test_plan_testql_workflow.py  test_planfile_generate_strategy.py  test_prellm_integration.py  test_privacy.py  test_privacy_extended.py  test_privacy_project.py  test_project_anonymizer.py  test_project_deanonymizer.py  test_proxym_integration.py  test_ticket_cleaner.py  test_ticket_freshness.py  test_ticket_pruner.py  test_workflows.py
(+247 files in other folders)
